vbnc/vbnc/tests/Errors/30057-1.vb
Module ArgumentTypeInference
    Sub a(Of T)(ByVal b As Integer)
        a(1, 2)
    End Sub
End Module